# hemlock-usb

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  feature-flags.json  menu.sh
blueprint/: REBRAND-BLUEPRINT.md  assignments.json  blueprint.md  checklist.md  hemlock-blueprint.md  profile-schema.md  project.json  ventoy-reference.md
blueprint/menu-tui-refactor/: assignments.json  blueprint.md  checklist.md  project.json
hemlock/: DEPLOY.sh  README.md  hemlock-tui
hemlock/hemlock-runtime/: .auto-update.sh  .auto-update.sh.sha256  .dockerignore  .env.template  .gitignore  AGENTS.md  Dockerfile  Dockerfile.agent  Dockerfile.crew  Dockerfile.export  Dockerfile.runtime  Dockerfile.runtime-core  Dockerfile.runtime-lean  Dockerfile.runtime-minimal  Makefile  README.md  docker-compose.runtime.yml  docker-compose.yml  entrypoint.sh  install.sh
hemlock/hemlock-runtime/config/: backup-config.yaml  gateway.yaml  runtime.yaml
hemlock/hemlock-runtime/crews/: agent_manager.py  builder_code_integration.py
hemlock/hemlock-runtime/docker/: .dockerignore  Dockerfile  agent_brain_mcp.py  docker-compose.yml  docker-config.yaml  entrypoint-minimal.sh  entrypoint.sh  (+4 more)
hemlock/hemlock-runtime/docker/agent-identity-kit/python/: pyproject.toml
hemlock/hemlock-runtime/docker/agent-identity-kit/python/agent_identity_kit/: __init__.py  __main__.py  _yaml.py  enforcer.py  memory.py  semantic.py
hemlock/hemlock-runtime/docker/agent-identity-kit/python/tests/: python_parity_test.py
hemlock/hemlock-runtime/docker/hermes-agent/: .dockerignore  agent_brain_mcp.py  paths.py  production_bringup.py  production_test.py  pyproject.toml  utils.py
hemlock/hemlock-runtime/docker/hermes-agent/autonomy/: __init__.py  protocol.py
hemlock/hemlock-runtime/docker/hermes-agent/backup/: DISASTER_RECOVERY.md  __init__.py  backup_manager.py  recovery_test.py
hemlock/hemlock-runtime/docker/hermes-agent/cognition/: __init__.py  behavior_profiling.py  cognitive_loop.py  memory_synthesis.py  phase14_test.py  phase16_test.py  reflection_engine.py  skill_generation.py  skill_sandbox.py
hemlock/hemlock-runtime/docker/hermes-agent/crew/: __init__.py  lifecycle.py
hemlock/hemlock-runtime/docker/hermes-agent/cron/: __init__.py  jobs.py  scheduler.py
hemlock/hemlock-runtime/docker/hermes-agent/gateway/: killswitch.py  monitor.py  protocol.py  run.py  session_store.py
hemlock/hemlock-runtime/docker/hermes-agent/hermes_cli/: __init__.py  auth.py  auth_commands.py  claw.py  commands.py  config.py  copilot_auth.py  cron.py  curses_ui.py  doctor.py  gateway.py  main.py  memory_setup.py  model_switch.py  models.py  nous_subscription.py  plugins.py  plugins_cmd.py  profiles.py  runtime_provider.py  runtime_provider.py.rej  setup.py  status.py  tools_config.py  uninstall.py  webhook.py
hemlock/hemlock-runtime/docker/hermes-agent/identity/: __init__.py  agent_identity.py  phase15_test.py
hemlock/hemlock-runtime/docker/hermes-agent/integration/: __init__.py  openclaw_bridge.py  phase17_test.py
hemlock/hemlock-runtime/docker/hermes-agent/orchestration/: __init__.py  lifecycle_manager.py  load_test.py  recovery_engine.py  scheduler.py
hemlock/hemlock-runtime/docker/hermes-agent/plugins/: __init__.py  cli.py  plugin_manager.py
hemlock/hemlock-runtime/docker/hermes-agent/project/: __init__.py  approval.py  manager.py
hemlock/hemlock-runtime/docker/hermes-agent/promotion/: __init__.py  pipeline_manager.py  pipeline_test.py
hemlock/hemlock-runtime/docker/hermes-agent/runtime/: __init__.py  cli.py  daemon_manager.py  init.py  phase13_test.py
hemlock/hemlock-runtime/docker/hermes-agent/skills/: skill_installer.py  skill_registry.py
hemlock/hemlock-runtime/docker/hermes-agent/tools/: memory_tool.py  session_search_tool.py  skills_sync.py
hemlock/hemlock-runtime/docker/hermes-agent/volumes/: volume_manager.py
usb/: README.md  usb-setup-assistant.sh
usb/lib/: core.sh
usb/tooling/: startup-orchestrator.sh  tooling-update.sh
(+217 files in other folders)
