[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hemlock"
version = "1.0.0"
description = "Hemlock Autonomous Runtime — OpenClaw gateway simplicity meets Hermes agent robustness"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.24",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "fire>=0.5",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "requests>=2.28",
    "certifi>=2023.0",
    "mcp>=1.0",
    "tiktoken>=0.5",
    "simple-term-menu>=1.6",
    "click>=8.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
discord = ["discord.py>=2.3", "pynacl>=1.5", "mutagen>=1.46"]
slack = ["slack-bolt>=1.18", "slack-sdk>=3.21"]
matrix = ["mautrix>=0.20"]
feishu = ["lark-oapi>=1.3", "websockets>=12.0"]
dingtalk = ["dingtalk-stream>=1.0"]
wecom = ["cryptography>=41.0"]
weixin = ["cryptography>=41.0", "qrcode>=7.0"]
mattermost = []
bluebubbles = []
signal = []
sms = []
webhook = []
homeassistant = []
proxy = ["aiohttp-socks>=0.8"]
browser = ["Pillow>=10.0"]
vision = []
web-search = ["exa-py>=1.0", "firecrawl-py>=1.0"]
image-gen = ["fal-client>=0.4"]
stt = ["faster-whisper>=1.0", "mistralai>=1.0"]
tts = ["edge-tts>=6.1", "elevenlabs>=1.0", "sounddevice>=0.4", "soundfile>=0.12", "numpy>=1.24"]
neutts = ["neutts>=0.1", "numpy>=1.24", "soundfile>=0.12"]
cloud-sandbox = ["modal>=0.6", "daytona-sdk>=0.1"]
rl = ["tinker-atropos>=0.1", "wandb>=0.15"]
compression = ["transformers>=4.30"]
clipboard = ["Pillow>=10.0"]
analytics = ["anthropic>=0.18"]
all = [
    "python-telegram-bot>=20.0",
    "discord.py>=2.3", "pynacl>=1.5", "mutagen>=1.46",
    "slack-bolt>=1.18", "slack-sdk>=3.21",
    "mautrix>=0.20",
    "lark-oapi>=1.3", "websockets>=12.0",
    "dingtalk-stream>=1.0",
    "cryptography>=41.0", "qrcode>=7.0",
    "aiohttp-socks>=0.8",
    "Pillow>=10.0",
    "exa-py>=1.0", "firecrawl-py>=1.0",
    "fal-client>=0.4",
    "faster-whisper>=1.0", "mistralai>=1.0",
    "edge-tts>=6.1", "elevenlabs>=1.0", "sounddevice>=0.4", "soundfile>=0.12", "numpy>=1.24",
    "modal>=0.6", "daytona-sdk>=0.1",
    "transformers>=4.30",
    "anthropic>=0.18",
]

[project.scripts]
hemlock = "hermes_cli.main:main"
hemlock-runtime = "runtime.cli:cli"

[tool.setuptools.packages.find]
include = [
    "agent*",
    "autonomy*",
    "backup*",
    "cognition*",
    "cron*",
    "crew*",
    "gateway*",
    "hermes_cli*",
    "identity*",
    "integration*",
    "orchestration*",
    "plugins*",
    "project*",
    "promotion*",
    "runtime*",
    "skills*",
    "tools*",
    "volumes*",
]

[tool.setuptools]
py-modules = [
    "agent_brain_mcp",
    "cli",
    "hermes_constants",
    "hermes_logging",
    "hermes_state",
    "hermes_time",
    "mcp_serve",
    "mini_swe_runner",
    "model_tools",
    "paths",
    "production_bringup",
    "production_test",
    "rl_cli",
    "run_agent",
    "toolset_distributions",
    "toolsets",
    "trajectory_compressor",
    "utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]